log
Thu 16 May 2024 03:41:20 PM UTC: 
 tests:  0|5
total_score: 0/70
455cebe
Thu 16 May 2024 04:02:31 PM UTC: 
 sudoku.c | 32 ++++++++++++++++++--------------
 1 file changed, 18 insertions(+), 14 deletions(-)
 tests:  2|4
total_score: 15/70
ba4c201
Thu 16 May 2024 04:21:49 PM UTC: 
 sudoku.c | 7 +++----
 1 file changed, 3 insertions(+), 4 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:47:1: error: control reaches end of non-void function [-Werror=return-type]
   47 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
38009e6
Thu 16 May 2024 04:21:56 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
35670c5
Thu 16 May 2024 04:23:44 PM UTC: 
 sudoku.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:49:4: error: expected expression before ‘}’ token
   49 |    }
      |    ^
sudoku.c:50:1: error: control reaches end of non-void function [-Werror=return-type]
   50 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
16fa903
Thu 16 May 2024 09:08:39 PM UTC: 
 sudoku.c | 15 ++++++++++++++-
 1 file changed, 14 insertions(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
bd5942a
Thu 16 May 2024 09:22:15 PM UTC: 
 sudoku.c | 20 ++++++++++----------
 1 file changed, 10 insertions(+), 10 deletions(-)
 tests:  2|4
total_score: 15/70
aa5afcf
Thu 16 May 2024 09:23:50 PM UTC: 
 sudoku.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  2|4
total_score: 15/70
047a5bc
Thu 16 May 2024 09:24:13 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
cfbdeac
Thu 16 May 2024 09:25:59 PM UTC: 
 sudoku.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  5|3
total_score: 35/70
6f4780f
Thu 16 May 2024 09:26:27 PM UTC: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  5|3
total_score: 35/70
cee4248
Thu 16 May 2024 09:26:50 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|4
total_score: 20/70
aa85ef7
Thu 16 May 2024 09:26:58 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
73fa722
Thu 16 May 2024 09:27:39 PM UTC: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  3|4
total_score: 20/70
fc6d87b
Thu 16 May 2024 09:27:59 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
ca2c6f1
Thu 16 May 2024 09:28:36 PM UTC: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
79241fb
Thu 16 May 2024 09:31:50 PM UTC: 
 sudoku.c | 7 ++-----
 1 file changed, 2 insertions(+), 5 deletions(-)
 tests:  5|3
total_score: 35/70
8f78f4e
Thu 16 May 2024 09:35:36 PM UTC: 
 sudoku.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
 tests:  6|2
total_score: 45/70
ccac216
Thu 16 May 2024 09:38:33 PM UTC: 
 sudoku.c | 20 +++++++++++++++++++-
 1 file changed, 19 insertions(+), 1 deletion(-)
 tests:  7|2
total_score: 50/70
5eae5c1
Thu 16 May 2024 09:43:18 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|3
total_score: 30/70
5129fe9
Thu 16 May 2024 09:43:25 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|2
total_score: 50/70
e9a7773
Thu 16 May 2024 09:46:34 PM UTC: 
 sudoku.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
 tests:  5|3
total_score: 35/70
edcdffb
Thu 16 May 2024 09:46:40 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|3
total_score: 30/70
9c68522
Thu 16 May 2024 09:47:04 PM UTC: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  7|2
total_score: 50/70
9d369dc
Thu 16 May 2024 09:49:05 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘DFS’:
sudoku.c:98:15: error: void value not ignored as it ought to be
   98 |     Node *n = pop(S);
      |               ^~~
Compilation failed
cb46798
Thu 16 May 2024 09:49:20 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|2
total_score: 50/70
803c840
Thu 16 May 2024 09:53:49 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|2
total_score: 50/70
5230ecd
Thu 16 May 2024 09:55:45 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|2
total_score: 50/70
9f73554
Fri 17 May 2024 12:51:36 AM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  4|3
total_score: 30/70
12546e0
Fri 17 May 2024 01:01:00 AM UTC: 
 sudoku.c | 36 ++++++++++++++++++++++++++++--------
 1 file changed, 28 insertions(+), 8 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:79:1: error: control reaches end of non-void function [-Werror=return-type]
   79 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
61bb1e5
Fri 17 May 2024 01:01:08 AM UTC: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  4|3
total_score: 30/70
e267a79
Fri 17 May 2024 01:01:45 AM UTC: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
ee002c9
Fri 17 May 2024 01:03:50 AM UTC: 
 sudoku.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  1|4
total_score: 10/70
01a48b5
Fri 17 May 2024 01:04:05 AM UTC: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|4
total_score: 10/70
186efe8
